--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Doolhof Game/src/doolhof/game/DoolhofGame.java
 /Doolhof Game/build/
 /Doolhof Game/dist/
+Doolhof-Game/Doolhof Game/nbproject/private/
